# Rtype

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  HOW_TO_CONTRIBUTE.md  Makefile  README.md  build.ps1  build.sh  tests.cpp  toolchain-mingw.cmake  vcpkg.json
PoC/BINARY/: CMakeLists.txt  README.md
PoC/PoC_Memory_Optimization/: CMakeLists.txt  PoC_Report.md  README.md  memory_optimization_decision.md
PoC/PoC_Memory_Optimization/MemoryPool/: MemoryPool.hpp  memory_pool.md  test_memory_pool.cpp
PoC/PoC_Memory_Optimization/ObjectPool/: ObjectPool.hpp  object_pool.md  test_object_pool.cpp
PoC/PoC_Movement/: CMakeLists.txt  MOVEMENT_ANALYSIS.md  README.md  movement_spike_summary.md  movement_system_decision.md  movement_visual_overview.md
PoC/PoC_Movement/BezierMovement/: CMakeLists.txt  main.cpp
PoC/PoC_Movement/LinearMovement/: CMakeLists.txt  LinearMovement.hpp  main.cpp
PoC/PoC_Movement/ScriptedMovement/: CMakeLists.txt  main.cpp  movement_script.txt
PoC/PoC_Movement/SineWaveMovement/: CMakeLists.txt
PoC/PoC_Network_Libs/: CMakeLists.txt  network_library_selection.md
PoC/PoC_Network_Libs/ace_poc/: README.md  test_poc.sh  udp_client.cpp
PoC/PoC_Network_Libs/asio_poc/: CMakeLists.txt  README.md  test_poc.sh  udp_client.cpp
PoC/PoC_Network_Libs/boost_asio_poc/: CMakeLists.txt  README.md  test_poc.sh  udp_client.cpp  udp_server.cpp
PoC/PoC_Network_Libs/qt_network_poc/: CMakeLists.txt  README.md  test_poc.sh  udp_client.cpp  udp_server.cpp
PoC/PoC_Network_Protocol/: CMakeLists.txt  PoC_Report.md  README.md  TcpTest.cpp  UdpTest.cpp
PoC/PoC_cpp_compil/: CMakeLists.txt  README.md  RESULTS.md  compiler_comparison_results.csv  test_cpp20_features.cpp  test_edge_cases.cpp  test_strict_warnings.cpp
PoC/PoC_cpp_compil/cmake_poc/: CMakeLists.txt  README.md  hello.cpp  test.sh
examples/: CMakeLists.txt
examples/ace_poc/: CMakeLists.txt  README.md  udp_server.cpp
examples/asio_poc/: udp_server.cpp
examples/boost_asio_poc/: test_poc.sh
examples/qt_network_poc/: README.md  test_poc.sh  udp_client.cpp  udp_server.cpp
lib/: CMakeLists.txt
lib/audio/: ALevelMusic.hpp  CMakeLists.txt  ILevelMusic.hpp
lib/audio/battleMusic/: BattleMusic.cpp  BattleMusic.hpp  CMakeLists.txt  entrypoint.cpp
lib/audio/chillMusic/: CMakeLists.txt  ChillMusic.cpp  ChillMusic.hpp  entrypoint.cpp
lib/audio/exploreMusic/: CMakeLists.txt  ExploreMusic.cpp  ExploreMusic.hpp  entrypoint.cpp
lib/background/: ABackground.hpp  CMakeLists.txt  IBackground.hpp
lib/background/AsteroidsSpace/: AsteroidsSpace.cpp  AsteroidsSpace.hpp  CMakeLists.txt  entrypoint.cpp
lib/background/BlackHole/: BlackHole.cpp  BlackHole.hpp  CMakeLists.txt  entrypoint.cpp
lib/background/Labs/: CMakeLists.txt  Labs.cpp  Labs.hpp  entrypoint.cpp
lib/background/Lobby/: CMakeLists.txt  LobbyBackground.cpp  LobbyBackground.hpp  entrypoint.cpp
lib/background/MeteorInside/: CMakeLists.txt  MeteorInside.cpp  MeteorInside.hpp  entrypoint.cpp
lib/background/SpatialStation/: CMakeLists.txt  SpatialStation.cpp  SpatialStation.hpp  entrypoint.cpp
lib/common/: CMakeLists.txt
lib/common/src/: CMakeLists.txt
lib/display/: ADisplay.cpp  ADisplay.hpp  CMakeLists.txt
lib/display/Clock/: CMakeLists.txt  Clock.cpp  Clock.hpp
lib/display/SDL2/: CMakeLists.txt  SDL2AudioEngine.cpp  SDL2AudioEngine.hpp  SDL2Display.cpp  SDL2Display.hpp  SDL2Font.cpp  SDL2Font.hpp  SDL2Music.cpp  SDL2Music.hpp  SDL2Sound.cpp  SDL2Sound.hpp  SDL2SoundBuffer.cpp  SDL2SoundBuffer.hpp  SDL2Texture.cpp  SDL2Texture.hpp  entrypoint.cpp
lib/display/SFML/: CMakeLists.txt  SFMLDisplay.cpp  SFMLDisplay.hpp  SFMLFont.cpp  SFMLFont.hpp  SFMLMusic.cpp  (+8 more)
lib/ecs/: CMakeLists.txt
lib/engine/: CMakeLists.txt
lib/engine_core/: CMakeLists.txt
lib/network/: CMakeLists.txt
lib/rtype_common/: CMakeLists.txt
lib/rtype_ecs/: CMakeLists.txt
lib/rtype_engine/: CMakeLists.txt
lib/rtype_engine_core/: CMakeLists.txt
lib/rtype_network/: CMakeLists.txt
src/ECS/: CMakeLists.txt  ECS.hpp
src/client/: CMakeLists.txt  ClientApp.cpp  ClientApp.hpp  GameAction.hpp  main.cpp
src/common/: ArgParser.hpp  CMakeLists.txt  Logger.hpp  Types.hpp
src/network/: ByteConverter.cpp  ByteConverter.hpp  CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.hpp  Packet.cpp  Packet.hpp  Protocol.hpp  Serializer.cpp  Serializer.hpp  UdpSocket.cpp  UdpSocket.hpp
src/server/: CMakeLists.txt  Client.hpp  ClientManager.cpp  ClientManager.hpp  IGameConfig.hpp  SafeQueue.hpp  ServerApp.cpp  ServerApp.hpp  ServerMetrics.hpp  main.cpp  main.hpp
tests/client/: CMakeLists.txt  test_accessibility_and_input.cpp  test_asset_managers.cpp  test_audio.cpp  test_audio_branches.cpp  test_audio_more.cpp  test_client_app.cpp  test_components.cpp  test_controller_rumble.cpp  test_entity_factory.cpp  test_graphic.cpp  test_input_handler.cpp  test_lobby.cpp  test_network_client.cpp  test_network_client_branches.cpp  test_network_client_callbacks.cpp  test_network_client_extra_branches.cpp  test_network_client_handlers.cpp  test_network_client_small.cpp  test_pause_menu.cpp  test_rtype_entity_factory.cpp  test_rumble.cpp  test_scene_manager.cpp  test_stress_ecs.cpp  test_stress_events.cpp  test_stress_rendering.cpp  test_systems.cpp  test_ui_components.cpp
tests/common/: CMakeLists.txt  SafeQueue_test.cpp  test_argparser.cpp  test_argparser_branches.cpp  test_binaryserializer_branches.cpp  test_config.cpp  test_config_branches.cpp  test_configparser_branches.cpp  test_fileoperations_branches.cpp  test_logger.cpp  test_numberparser_branches.cpp  test_rtypegameconfig_bounds.cpp  test_savemanager.cpp  test_savemanager_branches.cpp  test_scene_exception.cpp  test_tomlparser_branch_coverage.cpp  test_tomlparser_branches.cpp  test_tomlparser_extended.cpp
tests/ecs/: CMakeLists.txt  test_command_buffer.cpp  test_entity.cpp  test_event_manager.cpp  test_registry.cpp
tests/engine/: CMakeLists.txt  test_GameEngineFactory.cpp  test_time.cpp
tests/games/: CMakeLists.txt  test_additional_branch_coverage.cpp  test_branch_coverage_additional.cpp
(+1236 files in other folders)
