# ============================================================================
# R-Type Static Libraries
# ============================================================================

add_subdirectory(common)
add_subdirectory(ecs)
add_subdirectory(engine)
add_subdirectory(network)
add_subdirectory(display)
